<resources>
    <string name="app_name">BrandsIn</string>
    <string name="app_url">preferable_products</string>
    <string name="app_link_android">https://play.google.com/store/apps/details?id=com.hajaty.user</string>
    <string name="app_link_ios"></string>
    <string name="facebook_app_id">1299033187502307</string>
    <string name="google_maps_key">AIzaSyDWTbmhcokQYyU4PKjBLnzAZlac4hphs_I</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="pick_image_intent_text">Select image</string>
    <string name="permission_granted_try_again">Permission Granted Try Again!</string>
    <string name="permissions_are_needed_to_access_your_media">Permissions are needed to access your media.</string>
    <string name="permissions_denied_please_enable_them_in_settings">Permissions denied. Please enable them in settings.</string>
    <string name="permit_my_location"> Allow us to obtain your geographic location so that we can view all the stores near you and deliver your orders more easily and accurately.</string>
    <string name="permit_description">If we get your geographical location, we will deliver everything you need with a higher accuracy</string>
    <string name="location">geographical location</string>
    <string name="choose_location_manually">Choose location manually</string>
    <string name="login">Login</string>
    <string name="login_via_email">Login via email</string>
    <string name="phone_number">Phone number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="enter_phone_number">Eter phone number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="create_account">Create account</string>
    <string name="dont_have_account">Dont\'t have an account ?</string>
    <string name="continue_with_google_plus">Continue with google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_gmail">Login With email</string>
    <string name="login_or_register">Login or create new account</string>
    <string name="login_for_best_expirment">Login for best expirment</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"> Forgot Password ? </string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="invalid_password">Password must consist from 6:16 char</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="before_register_you_must_accept">Before register, you must accept</string>
    <string name="next">Next</string>
    <string name="Forgot_your_password">Forgot your password</string>
    <string name="enter_phone_to_reset_password">Enter your phone to reset password</string>
    <string name="resend">Resend</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Enter verification code was sent to your mobile</string>
    <string name="_00000">0000</string>
    <string name="reset_title">Enter new password</string>
    <string name="reset_desc">Enter your new password</string>
    <string name="terms_text">
    To become a member of the BrandsIn app on the network, you must first fill out the registration form, then agree and commit to the terms of the Talabat.com User Agreement. Upon completing and approving the registration form or obtaining any services or ordering a meal using the site;
</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="not_login">Login</string>
    <string name="offers">Offers</string>
    <string name="brands">Brands</string>
    <string name="notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="reorder">Reorder</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="contact">Contact us</string>
    <string name="welcome">Welcome</string>
    <string name="delivered_to">Delivered to</string>
    <string name="home">Home</string>
    <string name="address">محمد حجاج , وسط البلد , قصر النيل</string>
    <string name="show_menu">Show </string>
    <string name="select_deliver_place">Select delivery place</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_desc">The customer service team is pleased to implement my needs to respond to your inquiries and suggestions at any time. We are here to provide high quality services that meet your needs.</string>
    <string name="_20_1091860375">+</string>
    <string name="messages">Messages</string>
    <string name="cart">Cart</string>
    <string name="delete_cart_warning">Are you want to delete this item from cart ?</string>
    <string name="confirm">confirm</string>
    <string name="ignore">ignore</string>
    <string name="make_order">Make order</string>
    <string name="add_more">ِAdd more</string>
    <string name="total">Total</string>
    <string name="paid">Payable</string>
    <string name="sum">sum</string>
    <string name="delivery">delivery</string>
    <string name="extra_fees">delivery fees</string>
    <string name="_75">70 SAR</string>
    <string name="_15_50"> 15 SAR</string>
    <string name="_90_50"> 90 SAR </string>
    <string name="tell_us_something">Is there anything else you would like to add or alert the store to?</string>
    <string name="confirm_order">Confirm order</string>
    <string name="notes"> Notes </string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_info">Profile Info</string>
    <string name="profile">Profile</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="change_password">Change password</string>
    <string name="language">Language</string>
    <string name="lang">en</string>
    <string name="country">Country</string>
    <string name="arabic">Arabic</string>
    <string name="egypt">egypt</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="update_profile">Update Profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="enter_current_password">Enter Current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save">Save</string>
    <string name="about_app">About app</string>
    <string name="common_questions">Common questions</string>
    <string name="main"> Home </string>
    <string name="how_can_we_help_you">How can we help you</string>
    <string name="send">Send</string>
    <string name="if_we_help_you">Can we help you with something else?</string>
    <string name="write_your_questions">Write your inquiry here</string>
    <string name="version_number">Version number  </string>
    <string name="follow_us_via">Follow us through</string>
    <string name="what_is_your_rate_for_hagaty">Rate our app</string>
    <string name="write_here">Write here</string>
    <string name="send_your_rate">Send your rate</string>
    <string name="rate_app_title">Share your opinion with us</string>
    <string name="write_comment"> Write comment</string>
    <string name="rate_app_desc">Your comment and opinion help us to improve our services</string>
    <string name="delivery_done"> Delivery done</string>
    <string name="available_credit">Available credit</string>
    <string name="cards">Payment Cards</string>
    <string name="login_to_see_credit">Login to see your credit</string>
    <string name="first_name">First name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="full_name">Full name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="mail">Email</string>
    <string name="enter_mail">Enter Email</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="last_name">Last name</string>
    <string name="birthdate">Birthdate</string>
    <string name="enter_your_birthdate">Enter your birthdate</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="order_review">Order review</string>
    <string name="logout">Logout</string>
    <string name="add">add</string>
    <string name="delete">Delete</string>
    <string name="change">change</string>
    <string name="add_address">Add address</string>
    <string name="you_donnot_save_any_addresses_yet">You don\'t saved any addresses yet</string>
    <string name="no_saved_addresses">No saved addresses</string>
    <string name="search">Search</string>
    <string name="area">Area</string>
    <string name="address_type">Nature of the address (home / office …)</string>
    <string name="house_type">Building type</string>
    <string name="street_number">Street name</string>
    <string name="house_number">Building name or number</string>
    <string name="flat_number">flat number</string>
    <string name="improve_location">Change location</string>
    <string name="floor_number">Floor number</string>
    <string name="required_delivery_time">Delivery time</string>
    <string name="delivery_time_2">Delivery time</string>
    <string name="delivery_time">Delivery time</string>
    <string name="pre_order">Pre-order</string>
    <string name="discount_code">Discount code</string>
    <string name="discount_coupon">Discount coupon</string>
    <string name="if_exist">(If exist )</string>
    <string name="payment_way">Payment way</string>
    <string name="total_cost">Total Cost</string>
    <string name="all_offer_will_show_here">All offers will be shown here</string>
    <string name="your_opinion_in_driver">Write your opinion of the driver here</string>
    <string name="cancel">Cancel</string>
    <string name="my_order">My orders</string>
    <string name="discover">Discover</string>
    <string name="hajaty_wallet">Wallet</string>
    <string name="product_rating">Product Rating</string>
    <string name="write_a_product_review">Write A product review</string>
    <string name="address_to_evaluate_the_product">Address to evaluate the product</string>
    <string name="add_a_photo_or_video">Add a photo or video</string>
    <string name="optional">(optional)</string>
    <string name="click_to_download">Click to download</string>
    <string name="recipient_s_name">Recipient\'s name</string>
    <string name="reason_for_return">Reason for return</string>
    <string name="choose_the_reason_for_the_return">Choose the reason for the return</string>
    <string name="submit_a_return_request">Submit a return request</string>
    <string name="number_of_points_sent">Number of points sent</string>
    <string name="continuation">Continuation</string>
    <string name="enter_the_shipping_amount">Enter the shipping amount</string>
    <string name="buy_now">Buy Now</string>
</resources>