<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_16sdp">

    <TextView
        android:id="@+id/productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairoregular"
        android:layout_marginTop="@dimen/_12sdp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/product_rating"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@id/productRatingbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/productRatingbar"
        style="@style/MyRatingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:paddingStart="@dimen/_8sdp"
        android:stepSize="1.0"
        android:progressTint="@color/yellow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/productName"
        app:layout_constraintEnd_toEndOf="parent"
        app:mrb_indeterminateTint="@color/yellow"
        app:mrb_progressBackgroundTint="@color/yellow"
        app:mrb_progressTint="@color/yellow"
        app:mrb_secondaryProgressTint="@color/yellow"
        app:mrb_secondaryProgressTintMode="src_in"
        tools:ignore="RtlSymmetry"
        tools:rating="3.5" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/grey_subcategory"
        app:layout_constraintTop_toBottomOf="@id/productName" />

    <TextView
        android:id="@+id/txtWriteProductReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/cairo_bold"
        android:maxLines="1"
        android:text="@string/write_a_product_review"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddressEvaluateProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/about_bg"
        android:fontFamily="@font/cairoregular"
        android:gravity="start"
        android:hint="@string/write_a_product_review"
        android:lineSpacingExtra="-12dp"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/txtWriteProductReview" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etWhatDidYouLikeInProduct"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/about_bg"
        android:fontFamily="@font/cairoregular"
        android:gravity="start"
        android:hint="@string/address_to_evaluate_the_product"
        android:lineSpacingExtra="-12dp"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/etAddressEvaluateProduct" />

    <TextView
        android:id="@+id/txtAddPhotoAndVideoProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/add_a_photo_or_video"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWhatDidYouLikeInProduct" />

    <TextView
        android:id="@+id/txtOptionalProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/cairoregular"
        android:text="@string/optional"
        android:textColor="@color/grey"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@id/txtAddPhotoAndVideoProduct"
        app:layout_constraintStart_toEndOf="@id/txtAddPhotoAndVideoProduct"
        app:layout_constraintTop_toBottomOf="@+id/etWhatDidYouLikeInProduct" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddPhotoAndVideoProduct"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:background="@drawable/about_item_bg"
        android:drawableTop="@drawable/camera_img"
        android:fontFamily="@font/cairoregular"
        android:gravity="center"
        android:hint="@string/your_opinion_in_driver"
        android:paddingTop="@dimen/_16sdp"
        android:text="@string/click_to_download"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddPhotoAndVideoProduct" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgAddPhotoAndVideo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOptionalProduct"
        app:shapeAppearanceOverlay="@style/RoundedImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>