<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_top_white_curve"
    tools:context=".ui.menu.payment.RechargeBalanceFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtShippingAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/about_item_bg"
        android:hint="@string/enter_the_shipping_amount"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBuyNow"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/cairo_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="@id/edtShippingAmount"
        app:layout_constraintStart_toStartOf="@id/edtShippingAmount"
        app:layout_constraintTop_toBottomOf="@+id/edtShippingAmount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/_12sdp"
        android:layout_weight="1.2"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/cairo_semibold"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edtShippingAmount"
        app:layout_constraintStart_toStartOf="@id/edtShippingAmount"
        app:layout_constraintTop_toBottomOf="@+id/btnBuyNow" />

</androidx.constraintlayout.widget.ConstraintLayout>